<resources>
    <string name="app_name">55海淘返利</string>
    <string name="app_back_tips">再按一次退出程序</string>
    <string name="more">更多</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="operationg">数据正在提交中……</string>
    <string name="verifySending">发送验证码中……</string>
    <string name="empty_tips">暂时还没有数据</string>
    <string name="page_empty">当前页面没有内容哦~</string>
    <string name="network_load_error">网络加载失败~</string>
    <string name="exit">退出</string>
    <string name="close">关闭</string>
    <string name="network_error">请检查一下您的手机网络信号\n再尝试刷新下</string>
    <string name="refresh">刷新</string>
    <string name="refuse">残忍拒绝</string>
    <string name="reset_pwd">重置密码</string>
    <string name="net_error">网络异常</string>
    <string name="not_allow_agreement">您未同意55海淘服务协议</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_rebate">优惠</string>
    <string name="main_tab_store">商家</string>
    <string name="main_tab_forum">社区</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_me">我的</string>
    <string name="main_store_double_title">今日加倍返利商家</string>
    <string name="today_double_rebate">今日加倍返利</string>
    <string name="main_product_title">热门优惠</string>
    <string name="main_disocunt_latest">最新优惠</string>
    <string name="main_post_popular">社区热帖</string>
    <string name="main_sign">每日签到</string>
    <string name="main_store">返利商家</string>
    <string name="main_transport">转运物流</string>
    <string name="main_invite">邀请好友</string>
    <string name="ad">广告</string>
    <string name="discount_detail_title">优惠详情</string>
    <string name="disocunt_store_hot_title">热门返利商家</string>
    <string name="discount_title">优惠折扣</string>
    <string name="discount_store_title">返利商家</string>
    <string name="discount_discount_title">优惠折扣</string>
    <string name="discount_tag_title">标签</string>
    <string name="discount_store">所属商家</string>
    <string name="discount_other_deal">此商家其他优惠</string>
    <string name="discount_fav">收藏</string>
    <string name="discount_comment">评论</string>
    <string name="discount_comment_count">评论（%s）</string>
    <string name="discount_comment_more">查看更多评论</string>
    <string name="discount_55_buy">55帮您买</string>
    <string name="discount_comment_hint">请输入评论...</string>
    <string name="discount_comment_submit">发布</string>
    <string name="disocunt_comment_total">%d条评论</string>
    <string name="disocunt_rebate_desc">返利说明</string>
    <string name="discount_fill_order">自动填充订单</string>
    <string name="discount_exchange">汇率换算</string>
    <string name="disocunt_brower">浏览器打开</string>
    <string name="discount_all_category">全部分类</string>
    <string name="discount_all_store">全部商家</string>
    <string name="discount_all_filter">筛选</string>
    <string name="discount_filter_expire">即将过期</string>
    <string name="discount_filter_transports">支持转运</string>
    <string name="discount_filter_alipay">支持支付宝</string>
    <string name="alipay">支付宝</string>
    <string name="chinese_page">中文页面</string>
    <string name="disocunt_fav_success">收藏成功</string>
    <string name="disocunt_del_fav_success">取消收藏</string>
    <string name="disocunt_del_fav">取消收藏</string>
    <string name="disocunt_agree_success">点赞成功</string>
    <string name="praise">赞</string>
    <string name="disocunt_store_tips">查看商家</string>
    <string name="discount_filter">筛选</string>
    <string name="discount_filter_up">收起</string>
    <string name="discount_category">分类</string>
    <string name="discovery_activity">活动中心</string>
    <string name="discovery_exchange">金币兑换</string>
    <string name="discovery_trial">免费试用</string>
    <string name="discovery_sail">闲置转让</string>
    <string name="discovery_activiting">推荐活动</string>
    <string name="discovery_tring">推荐试用</string>
    <string name="discovery_total_activity">全部活动</string>
    <string name="discovery_total_trial">全部试用</string>
    <string name="discovery_transport">推荐转运</string>
    <string name="discovery_total_transport">全部转运</string>
    <string name="discovery_store">推荐商家</string>
    <string name="discovery_total_store">全部商家</string>
    <string name="exchange_title">金币兑换</string>
    <string name="exchange_price">价格：%1$s金币\n时间：%2$s</string>
    <string name="exchange_detail_title">兑换详情</string>
    <string name="store_double_rebate">今日加倍</string>
    <string name="store_popular">热门商家</string>
    <string name="store_more">全部商家</string>
    <string name="store_detail_title">商家详情</string>
    <string name="direct_post">直邮</string>
    <string name="direct_transport">直邮中国</string>
    <string name="store_support1">双币信用卡</string>
    <string name="store_support2">支付宝</string>
    <string name="store_support3">PayPal</string>
    <string name="store_support4">直邮</string>
    <string name="store_support5">转运</string>
    <string name="store_support6">中文页面</string>
    <string name="store_support7">中文地址</string>
    <string name="store_support8">中文客服</string>
    <string name="store_support9">手机购买拿返利</string>
    <string name="store_support10">大陆地区访问受限</string>
    <string name="store_support11">微信</string>
    <string name="store_limit">大陆地区访问受限</string>
    <string name="rebate_desc">返利说明</string>
    <string name="store_buy">去购买</string>
    <string name="store_buy_rebate">去购买拿返利</string>
    <string name="store_category_order">%1$s | 成功下单%2$s次</string>
    <string name="store_order">%1$s次成功下单</string>
    <string name="store_rebate_account">%1$s人获得返利</string>
    <string name="store_order_fav_no_rebate">%1$s人成功下单  ·  %2$s人收藏</string>
    <string name="store_order_fav_has_rebate">%1$s人获得返利  ·  %2$s人收藏</string>
    <string name="store_all_country">全部国家</string>
    <string name="store_country">国家</string>
    <string name="store_super_rebate">加倍返利的商家</string>
    <string name="store_direct_mail">支持直邮</string>
    <string name="buy_tips_nologin">登录后，通过55海淘去「%1$s」购物可享受%2$s的返利</string>
    <string name="buy_no_rebate">不要返利，去看看</string>
    <string name="buy_login">登录，拿返利</string>
    <string name="buy_coupon">折扣码</string>
    <string name="buy_coupon_copy">复制折扣码</string>
    <string name="buy_coupon_copy_success">折扣码复制成功</string>
    <string name="buy_rebate_tips">【提醒】手机购物可能无法获得返利，建议收藏后在网站购买</string>
    <string name="store_disocunt">优惠</string>
    <string name="store_comment">评论</string>
    <string name="store_detail">商家详情</string>
    <string name="store_comment_tips">请输入评论内容</string>
    <string name="forum_shaidan_tag">热门标签</string>
    <string name="forum_shaidan_choice">精选晒单</string>
    <string name="forum_share">晒单</string>
    <string name="forum_question">问问</string>
    <string name="forum_transport">转运</string>
    <string name="forum_raider">攻略</string>
    <string name="forum_post_recommend">热帖推荐</string>
    <string name="forum_talent">海淘达人</string>
    <string name="forum_event">活动</string>
    <string name="forum_transfer">无利转让</string>
    <string name="forum_event_title">活动中心</string>
    <string name="forum_talent_title">达人堂</string>
    <string name="section_title">全部版块</string>
    <string name="forum_section_title">选择版块</string>
    <string name="select_category">选择分类</string>
    <string name="forum_all_category">全部帖子</string>
    <string name="forum_close">收起部分版块</string>
    <string name="forum_open">展开全部版块</string>
    <string name="forum_open_all">展开更多置顶帖</string>
    <string name="forum_close_all">收起部分置顶贴</string>
    <string name="forum_post_title">版块主题</string>
    <string name="forum_order_time">最新发帖</string>
    <string name="forum_order_reply">最新评论</string>
    <string name="forum_talent_detail_title">个人主页</string>
    <string name="post_send_title">发布帖子</string>
    <string name="post_send_title_hint">输入帖子标题</string>
    <string name="post_send_content_hint">输入帖子内容</string>
    <string name="post_send_submit">发布</string>
    <string name="post_comment_hint">输入评论</string>
    <string name="post_detail_title">主题详情</string>
    <string name="post_comment_title">评论</string>
    <string name="onReply">回复</string>
    <string name="post_load_more">上滑加载第二页</string>
    <string name="post_load_back">下拉回到第一页</string>
    <string name="post_comment_add_title">添加评论</string>
    <string name="post_comment_reply_title">回复评论</string>
    <string name="post_section_hint">选择版块</string>
    <string name="post_section_tips">请选择版块</string>
    <string name="post_category_tips">请选择分类</string>
    <string name="post_subject_tips">标题为空</string>
    <string name="post_content_tips">内容为空</string>
    <string name="post_content_length_tips">内容不得少于15个字符</string>
    <string name="post_success">发送成功</string>
    <string name="post_save_cache_tips">是否保存当前内容，下次再进行编辑发布？</string>
    <string name="post_open_cache_tips">是否打开上一次保存的草稿内容?</string>
    <string name="post_no_comment_tips">还没有评论哦~赶紧去抢沙发~</string>
    <string name="photo_pick_all">所有照片</string>
    <string name="photo_pick_msg_amount_limit">已经达到最高选择数量</string>
    <string name="photo_pick_msg_no_camera">没有系统相机</string>
    <string name="photo_pick_camera">点击拍摄</string>
    <string name="photo_pick_complete">完成</string>
    <string name="camera_switch_error">切换失败，请重试！</string>
    <string name="camera_take_photo_error">拍照失败，请重试！</string>
    <string name="camera_open">打开</string>
    <string name="camera_close">关闭</string>
    <string name="camera_auto">自动</string>
    <string name="camera_operating">正在处理，请稍后</string>
    <string name="cropper_reselection">重选</string>
    <string name="cropper_selection">选取</string>
    <string name="preview_delete">删除</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="my_rebate">我的返利</string>
    <string name="order_number">订单号</string>
    <string name="order_store">商家</string>
    <string name="order_money">消费金额</string>
    <string name="order_rebate_amount">返利金额</string>
    <string name="note">备注</string>
    <string name="order_image">订单截图</string>
    <string name="order_detail">订单详情</string>
    <string name="cash_credit">卡号</string>
    <string name="cash_account">账号</string>
    <string name="cash_account_hint">请输入账号</string>
    <string name="cash_account_again_hint">请再次输入账号</string>
    <string name="name">姓名</string>
    <string name="id_number">身份证号码</string>
    <string name="cash_valid">有效期</string>
    <string name="rebate_detail">返利详情</string>
    <string name="rebate_status">状态</string>
    <string name="rebate_note">备注</string>
    <string name="login_pwd">密码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="bind_no_phone">应国家法律要求，使用互联网服务需要进行账号实名，为保障55海淘账号的正常使用，需要完成手机号码验证，感谢您的理解和支持。</string>
    <string name="date">日期</string>
    <string name="type">类型</string>
    <string name="status">状态</string>
    <string name="withdraw">提现</string>
    <string name="filter">筛选</string>
    <string name="submit">提交</string>
    <string name="order_lost_tip">丢单申诉成功后，订单将回到我的订单列表中</string>
    <string name="add_withdraw_account">添加提现账户</string>
    <string name="upload_store_order_pics">上传对应的商家订单截图（1~3张）</string>
    <string name="estimate_take_effect_time">预计生效日期</string>
    <string name="account_type">账户类型</string>
    <string name="select_rebate_order">选择返利订单</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="pwd_rules">包含数字和字母，6位以上</string>
    <string name="bank">银行</string>
    <string name="please_input_telephone">请输入手机号码</string>
    <string name="please_input_card_number">请输入银行卡号</string>
    <string name="please_input_card_owner">请输入持卡人姓名</string>
    <string name="please_input_id_number">请输入身份证号码</string>
    <string name="withdraw_account_add_hint">为了更好的保障您的账户资产，设置提现账户绑定，您需要提交一笔您55账户中的待生效或者已生效状态的返利订单，对应的购物网站的完整订单截图（包括订单号、交易日期、产品明细、交易金额等）。</string>
</resources>