<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">
    <!-- 顶部 -->
    <com.haitao.view.HtHeadView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_text="绑定手机号码" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="24dp"
        android:text="@string/bind_no_phone"
        android:textColor="@color/orangeFF804D"
        android:textSize="12sp" />

    <com.haitao.view.HtEditTextView
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        app:edit_hit_text="@string/please_input_telephone"
        app:left_right_image="@mipmap/ic_down_black_triangle"
        app:left_txt="+86">

    </com.haitao.view.HtEditTextView>

    <com.haitao.view.HtEditTextView
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:maxLines="1"
        app:edit_hit_text="@string/please_input_verify_code"
        app:left_txt="@string/verify_code"
        app:right_txt="@string/get_verify_code"
        app:right_txt_color="@color/gray_orange_selector"
        app:right_txt_enabled="false">

    </com.haitao.view.HtEditTextView>

    <TextView
        android:id="@+id/tv_commit"
        style="@style/SubmitButtonOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/confirm" />

</LinearLayout>
